--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Front-News</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
@@ -34,18 +34,26 @@
         <hr class="container h-5">
         <!-- categories section  -->
         <section class="container mt-4">
-            <ul id="category-container" class="d-flex justify-content-between list-unstyled "></ul>
+            <ul id="category-container" class="d-flex justify-content-between list-unstyled ">
+                <a href="#" class="fw-bold"">Home</a>
+            </ul>
 
         </section>
-        <!-- news card section  -->
-        <main class="container">
-            <div class="row row-cols-1 row-cols-md-2 gap-3" id="news-container">
-
-
-
-            </div>
-        </main>
     </header>
+        <!-- news card section  -->
+        <main class=" container">
+
+                    <div class="row row-cols-1 row-cols-md-2 gap-3" id="news-container">
+
+
+
+                    </div>
+                    </main>
+                    <section>
+                        <div id="none-msg" class="text-center mt-5 d-none">
+                            <h1 class="text-danger">No similar result Found!!</h1>
+                        </div>
+                    </section>
 
 
 
@@ -58,10 +66,11 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
-    <script src="/JS/app.js"></script>
+
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+                        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+                        crossorigin="anonymous"></script>
+                    <script src="/JS/app.js"></script>
 </body>
 
 </html>
