--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,7 +25,7 @@
                     <div class="navbar-nav ">
 
                         <a class="nav-link text-danger fw-bold mx-4" href="#">News</a>
-                        <a class="nav-link fw-bold" href="#">Blog</a>
+                        <a class="nav-link fw-bold" href="/HTML/blog.html">Blog</a>
 
                     </div>
                 </div>
@@ -40,6 +40,8 @@
 
         </section>
     </header>
+
+
         <!-- news card section  -->
         <main class=" container">
 
@@ -48,14 +50,20 @@
 
 
                     </div>
+
+
+
+
+                    <!-- no result found section  -->
+
                     </main>
+
+
                     <section>
                         <div id="none-msg" class="text-center mt-5 d-none">
                             <h1 class="text-danger">No similar result Found!!</h1>
                         </div>
                     </section>
-
-
 
 
 
