--- a/HTML/index.html
+++ b/HTML/index.html
@@ -67,7 +67,14 @@
         </div>
     </section>
 
-
+    <!-- spinner addede here  -->
+    <section class="mt-5 d-none" id="spinner-loader">
+        <div class="d-flex justify-content-center">
+            <div class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </section>
     <!-- modal -->
     <section>
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
