--- a/HTML/index.html
+++ b/HTML/index.html
@@ -40,7 +40,7 @@
 
         <!-- show the number of news on the category  -->
         <section>
-            <div class="bg-white container p-3 newsNumber mb-5" id="newsNumber"></div>
+            <div class="bg-white container p-3 newsNumber mb-5 shadow" id="newsNumber"></div>
         </section>
 
 
@@ -51,7 +51,7 @@
     <!-- news card section  -->
     <main class=" container">
 
-        <div class="row row-cols-1 row-cols-md-2 gap-3" id="news-container">
+        <div class="row row-cols-1 row-cols-md-2 gap-3 shadow" id="news-container">
 
 
 
@@ -106,7 +106,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-    <script src="/JS/app.js"></script>
+    <script src="/app.js"></script>
 </body>
 
 </html>
