blog page designed

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <!-- first navbar  -->
         <nav class="navbar navbar-expand-lg bg-light container">
             <div class="container-fluid">
-                <h3 class="navbar-brand text-promary fw-bold">Front-News</h3>
+                <h3 class="navbar-brand text-success fw-bold">Front-News</h3>
 
                 <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav d-flex flex-row">
 
-                        <a class="nav-link text-danger fw-bold mx-4" href="#">News</a>
-                        <a class="nav-link fw-bold" href="/HTML/blog.html">Blog</a>
+                        <a class="nav-link text-primary  fw-bold mx-4" href="#">News</a>
+                        <a class="nav-link fw-bold text-danger" href="blog.html">Blog</a>
 
                     </div>
                 </div>
